--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "AhmedAbd-Allah",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.2",
     "mongoose": "^5.11.12",
     "uuidv4": "^6.2.6"
   },
