--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./node_modules/mocha/bin/mocha --exit Tests/scenarios/*.test.js"
   },
   "author": "AhmedAbd-Allah",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.2",
+    "mocha": "^8.2.1",
     "mongoose": "^5.11.12",
-    "uuidv4": "^6.2.6"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
