--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "node ./node_modules/mocha/bin/mocha --exit Tests/scenarios/*.test.js"
   },
   "author": "AhmedAbd-Allah",
